# SkillSync

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
openspec/changes/archive/2026-04-03-skillsync-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-08-i18n-language-switching/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-auto-discover-plugins/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-auto-discovery-sync/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-auto-release-self-update/: design.md  tasks.md  (+1 more)
openspec/specs/auto-watcher/: spec.md
openspec/specs/git-sync/: spec.md
openspec/specs/i18n/: spec.md
openspec/specs/interactive-selector/: spec.md
openspec/specs/profile-system/: spec.md
openspec/specs/registry-management/: spec.md
src/: lib.rs  main.rs
src/claude/: hooks.rs  mod.rs  paths.rs  settings.rs
src/cli/: add.rs  doctor.rs  hook.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  profile.rs  pull.rs  push.rs  release.rs  remote.rs  remove.rs  resolve.rs  search.rs  self_update.rs  sync_cmd.rs  update.rs  use_cmd.rs  watch.rs
src/i18n/: mod.rs
src/installer/: mcp_installer.rs  mod.rs  plugin_installer.rs  settings_merger.rs  skill_installer.rs
src/registry/: config.rs  discover.rs  git_ops.rs  manifest.rs  mod.rs  resource.rs
src/state/: db.rs  mod.rs
src/tui/: diff_viewer.rs  mod.rs  profile_picker.rs  selector.rs
src/watcher/: fs_watcher.rs
tests/: integration_test.rs
(+13 files in other folders)
