[package]
name = "skillsync"
version = "0.1.0"
edition = "2021"
description = "Sync Claude Code skills, plugins, and MCP servers across machines and projects"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Interactive TUI
inquire = "0.7"
console = "0.15"
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Git
git2 = "0.19"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Local state
rusqlite = { version = "0.32", features = ["bundled"] }

# File operations
walkdir = "2"
sha2 = "0.10"
fs_extra = "1.3"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3"
